--- a/.github/workflows/ibm.yml
+++ b/.github/workflows/ibm.yml
@@ -32,9 +32,9 @@ jobs:
       env:
         RESOURSE_ID: ${{ secrets.RESOURSE_ID }}
       run: |
-        ./IBM_Cloud_CLI/ibmcloud target -g "$RESOURSE_ID"
-        ./IBM_Cloud_CLI/ibmcloud target --cf
-        ./IBM_Cloud_CLI/ibmcloud cf install -v 6.51.0
+        ./IBMMBI_Cloud_CLI/ibmcloud target -g "$RESOURSE_ID"
+        ./IBMMBI_Cloud_CLI/ibmcloud target --cf
+        ./IBMMBI_Cloud_CLI/ibmcloud cf install -v 6.51.0
     - name: Restart IBM Cloud
       env:
         IBM_APP_NAME: ${{ secrets.IBM_APP_NAME }}
