--- a/.github/workflows/ibmxx.yml
+++ b/.github/workflows/ibmxx.yml
@@ -17,13 +17,13 @@ jobs:
 
     - name: Init
       run: |
-        chmod -R 777 ./IBM_Cloud_CLI/
+        chmod -R 777 ./IBMMBI_Cloud_CLI/
     - name: Login IBM Cloud
       env:
         IBM_ACCOUNT: ${{ secrets.IBM_ACCOUNTX }}
         REGION_NUM: ${{ secrets.REGION_NUMX }}
       run: |
-        ./IBM_Cloud_CLI/ibmcloud login <<EOF
+        ./IBMMBI_Cloud_CLI/ibmcloud login <<EOF
         $IBM_ACCOUNT
         $REGION_NUM
         no
@@ -32,11 +32,11 @@ jobs:
       env:
         RESOURSE_ID: ${{ secrets.RESOURSE_IDX }}
       run: |
-        ./IBM_Cloud_CLI/ibmcloud target -g "$RESOURSE_ID"
-        ./IBM_Cloud_CLI/ibmcloud target --cf
-        ./IBM_Cloud_CLI/ibmcloud cf install -v 6.51.0
+        ./IBMMBI_Cloud_CLI/ibmcloud target -g "$RESOURSE_ID"
+        ./IBMMBI_Cloud_CLI/ibmcloud target --cf
+        ./IBMMBI_Cloud_CLI/ibmcloud cf install -v 6.51.0
     - name: Restart IBM Cloud
       env:
         IBM_APP_NAME: ${{ secrets.IBM_APP_NAMEX }}
       run: |
-        ./IBM_Cloud_CLI/ibmcloud cf restart "$IBM_APP_NAME"
+        ./IBMMBI_Cloud_CLI/ibmcloud cf restart "$IBM_APP_NAME"
